--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_retracter.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_retracter.html.twig
@@ -6,8 +6,39 @@
             <span class="glyphicon glyphicon-thumbs-down"></span>
             &nbsp;&nbsp;&nbsp;Liste des classeurs retractables
         </div>
-        {% include 'SesileClasseurBundle:Classeur:liste_retracter.html.twig' %}
-    </div>
+		<table class="table tableau dtables">
+			<thead>
+			<tr>
+				<th>Titre du classeur</th>
+				<th>Date de création</th>
+				<th>Date limite de validation</th>
+				<th>Intervenant</th>
+				<th>Type de classeur</th>
+				<th>Statut actuel</th>
+				<th>Actions</th>
+			</tr>
+			</thead>
+			<tbody>
+			{% for classeur in classeurs %}
+				<tr class="classeur-row">
+					<td><a href="{{ path('classeur_edit', {id: classeur.id}) }}" class="link-datatable">{{ classeur.nom }}</a></td>
+					<td><a href="{{ path('classeur_edit', {id: classeur.id}) }}" class="link-datatable">{{ classeur.creation |date("d/m/Y H:m") }}</a></td>
+					<td><a href="{{ path('classeur_edit', {id: classeur.id}) }}" class="link-datatable">{{ classeur.validation |date("d/m/Y") }}</a></td>
+					<td><a href="{{ path('classeur_edit', {id: classeur.id}) }}" class="link-datatable">{% for validant in classeur.validants %} {{ validant.prenom }} {{ validant.nom }} {% if loop.index != classeur.validants|length %}/{% endif %} {% endfor %} </a></td>
+					<td><a href="{{ path('classeur_edit', {id: classeur.id}) }}" class="link-datatable">{{ classeur.type.nom }}</a></td>
+					<td>
+						<a href="{{ path('classeur_edit', {id: classeur.id}) }}" class="link-datatable"><span class="glyphicon statut_{{ classeur.status }}"></span></a>
+					</td>
+					<td>
+						<a class="col-sm-6" href="{{ path('classeur_edit', {id: classeur.id}) }}"><span class="glyphicon glyphicon-pencil" title="Editer le document"></span></a>
+					</td>
+				</tr>
+			{% endfor %}
+
+			</tbody>
+		</table>
+
+	</div>
     <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
     <script type="application/javascript" src="//cdn.datatables.net/plug-ins/1.10.9/api/page.jumpToData().js"></script>
     <script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
