--- a/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
@@ -18,14 +18,14 @@
 	    <tbody>
 		{% for coll in collectivites %}
 		    <tr class="coll-row" data-id="{{ coll.id }}">
-			<td>{{ coll.nom }}</td>
-			<td>{{ coll.domain }}</td>
-			<td>{% if  coll.active == 1 %}<div class="glyphicon glyphicon-ok" style="color: #5CB85C"></div>{% else %}<div class="glyphicon glyphicon-remove" style="color: #D9534F"></div>{% endif %}</td>
-			<td class="boutons_action">
-			    <a href="{{ path("edit_collectivite", {'id' : coll.id }) }}" title="Editer la collectivité"><span class="glyphicon glyphicon-pencil"></span></a>
-				{#<a href="{{ path("edit_collectivite", {'id' : coll.id }) }}" title="Supprimer la collectivité" data-toggle="modal" data-target="#deleteColl"><span class="glyphicon glyphicon-trash"></span></a>#}
-				<span title="Supprimer la collectivité" data-toggle="modal" data-target="#deleteColl" data-collectivite="{{ coll.nom }}" data-whatever="{{ path("delete_collectivite", {'id' : coll.id }) }}" class="glyphicon glyphicon-trash"></span>
-			</td>
+				<td>{{ coll.nom }}</td>
+				<td>{{ coll.domain }}</td>
+				<td>{% if  coll.active == 1 %}<div class="glyphicon glyphicon-ok" style="color: #5CB85C"></div>{% else %}<div class="glyphicon glyphicon-remove" style="color: #D9534F"></div>{% endif %}</td>
+				<td class="boutons_action">
+					<a href="{{ path("edit_collectivite", {'id' : coll.id }) }}" title="Editer la collectivité"><span class="glyphicon glyphicon-pencil"></span></a>
+					<a href="#" title="Supprimer la collectivité" data-toggle="modal" data-target="#deleteColl" data-collectivite="{{ coll.nom }}" data-whatever="{{ path("delete_collectivite", {'id' : coll.id }) }}" ><span class="glyphicon glyphicon-trash"></span></a>
+					{#<span title="Supprimer la collectivité" data-toggle="modal" data-target="#deleteColl" data-collectivite="{{ coll.nom }}" data-whatever="{{ path("delete_collectivite", {'id' : coll.id }) }}" class="glyphicon glyphicon-trash"></span>#}
+				</td>
 		    </tr>
 		{% endfor %}
 	    </tbody>
@@ -90,16 +90,15 @@
 			"sPaginationType": "full_numbers"
 			});
 
-			$('#deleteColl').on('shown.bs.modal', function () {})
+			//$('#deleteColl').on('shown.bs.modal', function () {})
 		});
 
-		$(".coll-row").click(function () {
-			document.location.href = Routing.generate('edit_collectivite', { id: $(this).data("id") });
+		$(".coll-row td:not(.boutons_action)").click(function () {
+			document.location.href = Routing.generate('edit_collectivite', { id: $(this).parent().data("id") });
 		});
 
 
 		$('#deleteColl').on('show.bs.modal', function (event) {
-			console.log('coucou');
 			var button = $(event.relatedTarget); // Button that triggered the modal
 			var recipient = button.data('whatever'); // Extract info from data-* attributes
 			var collectivite = button.data('collectivite'); // Extract info from data-* attributes
