--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
@@ -17,13 +17,15 @@
                     </button>
                     <ul class="dropdown-menu">
                         {% for role in uservalidant.UserRole %}
-                            <li><a href="#" class="btn-valider-signer" data-action="{{ path('signdocjws',{'id':classeur.id, 'role':role.id,}) }}">{{ role.userRoles }}</a></li>
+                            {#<li><a href="#" class="btn-valider-signer" data-action="{{ path('signdocjws',{'id':classeur.id, 'role':role.id,}) }}">{{ role.userRoles }}</a></li>#}
+                            <li><a data-action="{{ path('jnlpSignerFiles',{'id':classeursId,'role':role.id}) }}" class="btn-valider-signer">{{ role.userRoles }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
             {# Signer le classeur sans multi roles #}
             {% else %}
-                <button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signdocjws',{'id':classeur.id}) }}">
+                {#<button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signdocjws',{'id':classeur.id}) }}">#}
+                <button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('jnlpSignerFiles',{'id':classeursId}) }}">
                     <span class="glyphicon glyphicon-ok"></span>
                     &nbsp;Valider et Signer
                 </button>
