--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -19,17 +19,7 @@
 
                 <div class="col-lg-2 text-right">
                     {# Affichage du statut du classeur #}
-                    {% if classeur.status == 0 %}
-                        <p class="status_classeur statut_refuse"><span class="glyphicon statut_0"> </span> Classeur refusé</p>
-                    {% elseif classeur.status == 1 %}
-                        <p class="status_classeur statut_cours"><span class="glyphicon statut_1"> </span> Classeur en cours</p>
-                    {% elseif classeur.status == 2 %}
-                        <p class="status_classeur statut_finalise"><span class="glyphicon statut_2"> </span> Classeur finalisé</p>
-                    {% elseif classeur.status == 3 %}
-                        <p class="status_classeur statut_retire"><span class="glyphicon statut_3"> </span> Classeur retiré</p>
-                    {% elseif classeur.status == 4 %}
-                        <p class="status_classeur statut_retracte"><span class="glyphicon statut_4"> </span> Classeur rétracté</p>
-                    {% endif %}
+                    {% include "SesileClasseurBundle:Classeur:statut_classeur.html.twig" with { 'classeur_id':classeur.id} %}
                     {# FIN Affichage du statut du classeur #}
                 </div>
             </div>
@@ -71,7 +61,7 @@
         <div class="legende">
             <span class="txt_legende"><span class="glyphicon glyphicon-pushpin"></span>&nbsp;&nbsp;Délégation</span>
 
-            <span class="glyphicon statut_0"></span>
+            <span class="glyphicon glyphicon-warning-sign"></span>
             <span class="texte_legende tl3">&nbsp;Ce classeur vous a été délégué par
                 </span>&nbsp;&nbsp;
                 {% if uservalidant.path is defined and uservalidant.path is not null %}
@@ -180,17 +170,18 @@
                 </div>
                 <div class="col-lg-2 text-right">
                     {# Affichage du statut du classeur #}
-                    {% if classeur.status == 0 %}
-                        <p class="status_classeur statut_refuse"><span class="glyphicon statut_0"> </span> Classeur refusé</p>
+                    {% include "SesileClasseurBundle:Classeur:statut_classeur.html.twig" with { 'classeur_id':classeur.id} %}
+                    {#{% if classeur.status == 0 %}
+                        <p class="status_classeur statut_refuse"><span class="glyphicon glyphicon-warning-sign"> </span> Classeur refusé</p>
                     {% elseif classeur.status == 1 %}
-                        <p class="status_classeur statut_cours"><span class="glyphicon statut_1"> </span> Classeur en cours</p>
+                        <p class="status_classeur statut_cours"><span class="glyphicon glyphicon-time"> </span> Classeur en cours</p>
                     {% elseif classeur.status == 2 %}
-                        <p class="status_classeur statut_finalise"><span class="glyphicon statut_2"> </span> Classeur finalisé</p>
+                        <p class="status_classeur statut_finalise"><span class="glyphicon glyphicon-saved"> </span> Classeur finalisé</p>
                     {% elseif classeur.status == 3 %}
-                        <p class="status_classeur statut_retire"><span class="glyphicon statut_3"> </span> Classeur retiré</p>
+                        <p class="status_classeur statut_retire"><span class="glyphicon glyphicon-remove-sign"> </span> Classeur retiré</p>
                     {% elseif classeur.status == 4 %}
-                        <p class="status_classeur statut_retracte"><span class="glyphicon statut_4"> </span> Classeur rétracté</p>
-                    {% endif %}
+                        <p class="status_classeur statut_retracte"><span class="glyphicon glyphicon-warning-sign"> </span> Classeur rétracté</p>
+                    {% endif %}#}
                     {# FIN Affichage du statut du classeur #}
                 </div>
             </div>
@@ -244,7 +235,7 @@
             <div class="legende">
                 <span class="txt_legende"><span class="glyphicon glyphicon-pushpin"></span>&nbsp;&nbsp;Délégation</span>
 
-                <span class="glyphicon statut_0"></span>
+                <span class="glyphicon glyphicon-warning-sign"></span>
                 <span class="texte_legende tl3">&nbsp;Ce classeur vous a été délégué par </span>&nbsp;&nbsp;
                 {% if uservalidant.path is defined and uservalidant.path is not null %}
                     <img class="userpicture" src="{{ asset(upload_path ~ uservalidant.path) }}"/>
@@ -594,9 +585,8 @@
 //                $(".btn-modifs, .btn-valider, .btn-refuser, .btn-valider-signer, .btn-valider-non-signer, .btn-valider-signer-pdf").click(function () {
             // Permet de soumettre les données une seule fois, évite les doubles soumissions
             $(".btn-modifs, .btn-valider, .btn-refuser, .btn-valider-signer, .btn-valider-non-signer, .btn-valider-signer-pdf").one('click', function () {
-                if($(this).hasClass("btn-modifs") || $(this).hasClass("btn-valider-signer") || $(this).hasClass("btn-valider-non-signer") || $(this).hasClass("btn-valider")) {
-                    // ?? est ce nécessaire
-                }
+                /*if($(this).hasClass("btn-modifs") || $(this).hasClass("btn-valider-signer") || $(this).hasClass("btn-valider-non-signer") || $(this).hasClass("btn-valider")) {
+                }*/
 
                 if(typeof(dropzone) != 'undefined') {
                     if( ( typeof(mockFile) != 'object' && dropzone.getAcceptedFiles().length == 0) || ( typeof(mockFile) == 'object' && mockFile == {} ) || (dropzone.element.childElementCount < 2)) {
