--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/signDocJws.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/signDocJws.html.twig
@@ -80,8 +80,7 @@
                 </div>
                 <div class="col-md-2 text-right">
                     {# Affichage du statut du classeur #}
-                    <p class="status_classeur statut_cours"><span class="glyphicon statut_1"> </span> Classeur en cours</p>
-                    <p class="status_classeur statut_finalise"><span class="glyphicon statut_2"> </span> Classeur finalisé</p>
+                    {% include "SesileClasseurBundle:Classeur:statut_classeur.html.twig" with { 'classeur_id':classeur.id} %}
                     {# FIN Affichage du statut du classeur #}
                 </div>
             </div>
@@ -93,11 +92,8 @@
                         {% for doctosign in classeur.documents %}
                             <li class="document-{{ doctosign.id }}">
                                 {#<p class="status_classeur label-warning statut_refuse"><span class="glyphicon glyphicon-remove"> </span> document non signé</p>#}
-                                {#<span class="glyphicon glyphicon-remove label label-danger" > </span>#}
                                 <span class="label label-warning statut_attente"></span>
-                                {#<img class="loadinggif statut_refuse" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>#}
-                                <p class="status_classeur statut_finalise"><span class="glyphicon statut_2"> </span> document signé</p>
-                                {#<span class="glyphicon glyphicon-ok label label-success"> </span>#}
+                                <p class="status_document statut_finalise"><span class="glyphicon statut_2"> </span> document signé</p>
                                 <strong>
                                     {% if (doctosign.name | length ) > 100 %}
                                         {{ doctosign.name[:50] }}....xml
@@ -171,7 +167,7 @@
     }
 
     // Fonction permettan de recup le status d un classeur
-    function callClasseurSatus() {
+    /*function callClasseurSatus() {
         {% for classeur in classeurs %}
             $.ajax({
                 url: Routing.generate('status_classeur', {id: {{ classeur.id }}}),
@@ -200,25 +196,23 @@
 
         // Fonction permettant de relancer la fonction de test du status du document
         setTimeout(callClasseurSatus, my_delay);
-    }
+    }*/
 
     $(document).ready(function() {
 
         // A l initialisation, on cache l icone doc signé et classeur validé
-        $(".statut_finalise").hide();
-        $(".status_classeur.statut_finalise").hide();
+//        $(".statut_finalise").hide();
+//        $(".status_classeur.statut_finalise").hide();
 
 
         // On exécute la fonction pour tous les documents
         callDocumentAjax();
 
         // On ré-exécute la fonction pour le classeur
-        callClasseurSatus();
+//        callClasseurSatus();
 
 
         $(".btn-signature").on('click', function (e) {
-            //e.preventDefault();
-
 
             {#window.location = "{{ path('jnlpSignerFiles', {id:classeursId,'role':role.id}) }}";#}
             {% if role is null %}
@@ -231,7 +225,7 @@
             callDocumentAjax();
 
             // On ré-exécute la fonction pour le classeur (bug FF)
-            callClasseurSatus();
+//            callClasseurSatus();
 
             // On cache le bouton pour ne pas reclicker dessus
             $(".btn-signature").hide();
