[Evo] #428 - Afficher un lien vers une vidéo de démonstation des nouveauté MAJ SESILE
Intégration d'un bouton pour le visionnage d'unevidéo sur les mises à jour de Sesile

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -44,6 +44,7 @@
                 <img src="{{ asset("/images/logos.svg") }}"/>
         </div>
         </a>
+        <a href="#" class="btn-video-maj" target="_blank"></a>
         <img id="separateur_logo" src="{{ asset("/images/gradient-sesile.png") }}"/>
         <div id="logo">
         <div class="border_imposetonstyle">
