[Fix] #482 - Renommer le bouton vert "Valider et Signer avec le rôle"

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
@@ -7,7 +7,7 @@
         {% if uservalidant.UserRole | length > 1 %}
             <div class="btn-group btn-group-valider-signer">
                 <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Valider et Signer avec le rôle <span class="caret"></span>
+                    Lancement du processus de signature avec le rôle <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
                     {% for role in uservalidant.UserRole %}
