--- a/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
@@ -115,7 +115,7 @@
             <br><br>
         {% endif %}
         <div id="bordcontent" class="col-lg-12 bordcontent-{{ idDoc }}">
-
+            <img class="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
         </div>
     </div>
 
@@ -126,8 +126,10 @@
                 url: Routing.generate('visubord', {'id': idDoc, 'bord': 0}),
                 method: "GET",
                 success: function (retourbak) {
+                    $('.bordcontent-{{ idDoc }} .loadinggif').hide();
                     $('.bordcontent-{{ idDoc }}').empty();
                     $('.bordcontent-{{ idDoc }}').append(retourbak);
+
                 }
             });
 
