--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -44,7 +44,7 @@
                 <img src="{{ asset("/images/logos.svg") }}"/>
         </div>
         </a>
-        <a href="#" class="btn-video-maj" target="_blank"></a>
+        <a href="https://youtu.be/ms-YYoaU4PE" class="btn-video-maj" target="_blank"></a>
         <img id="separateur_logo" src="{{ asset("/images/gradient-sesile.png") }}"/>
         <div id="logo">
         <div class="border_imposetonstyle">
